Nouveautés et améliorations
De nouvelles options ont été apportées au programme.

--- a/ProgFTP-build-desktop-Qt_4_8_1_for_Desktop_-_MinGW__Qt_SDK__Debug/servers/Pox.ini
+++ b/ProgFTP-build-desktop-Qt_4_8_1_for_Desktop_-_MinGW__Qt_SDK__Debug/servers/Pox.ini
@@ -1,8 +1,8 @@
 [General]
 name=Pox
 adress=ftp.alwaysdata.com
-login=pox
-password=LovePox06
-port=21
-localfolder=D:\\Download/
-remotefolder=/
+login=
+password=
+port=
+localfolder=localfolder
+remotefolder=remotefolder
